# embed-cpp

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  app  cmake_install.cmake  config.json  foo.cpp  main  main.cpp  todo.cpp  todo.h
animal/: CMakeLists.txt  animal.cpp  main.cpp
animal/includes/: Animal.hpp  Cat.hpp  Dog.hpp  cat.hpp  dog.hpp
animal/src/: Cat.cpp  animal.cpp  cat.cpp  dog.cpp
exceptions/: CMakeLists.txt  exceptions.cpp  main.cpp
exceptions/includes/: Exceptions.hpp  IntArray.hpp  MoveClass.hpp  arrayException.hpp  copyClass.hpp  exceptions.hpp
exceptions/src/: ArrayEception.cpp  Exceptions.cpp  IntArray.cpp  MoveClass.cpp  arrayEception.cpp  copyClass.cpp  exceptions.cpp  intArray.cpp  moveClass.cpp
game/: CMakeLists.txt  game.cpp  main.cpp
game/includes/: Game.hpp  Monster.hpp  Player.hpp  creature.hpp  game.hpp  monster.hpp  player.hpp  potion.hpp
game/src/: Game.cpp  Monster.cpp  creature.cpp  game.cpp  monster.cpp  player.cpp  potion.cpp
includes/: Array.h  Fraction.hpp  Random.h  animal.hpp  counter.h  exceptions.hpp  foo.h  foo.hpp  fraction.hpp  game.h  game.hpp  primeNumber.h  storage_templates.h  threads.h  todo.h  todo.hpp
monitor/: CMakeLists.txt  Monitor.cpp  Monitor.hpp  TimeSlot.cpp  TimeSlot.hpp  main.cpp
mosqui/: CMakeLists.txt  ca.key  ca.srl  client.csr
mosqui/ca/: client.key
mosqui/certs/: client.crt  client.csr  client.key
mosqui/lib/: CMakeLists.txt
mosqui/pub_client/: CMakeLists.txt  cpuUsage.cpp  listApps.cpp  pub_client.cpp  pub_client_nonssl.cpp  ramUsage.cpp  temperatureCpu.cpp
mosqui/pub_client/ca_certificates/: ca.crt
mosqui/pub_client/certs/: client.crt  client.csr
mosqui/server/: mosq.conf  mosqui.conf
mosqui/server/ca_certificates/: ca.key  ca.srl
mosqui/server/certs/: server.crt  server.csr  server.key
mosqui/sub_client/: CMakeLists.txt  config.json  lcd16.cpp  led.cpp  sub_client.cpp  sub_client_nonssl.cpp
mosqui/sub_client/ca_certificates/: ca.srl
mosqui/web_server/: ReceivedFromSystem.cpp  main.cpp  sendToSystem.cpp
mosqui/web_server/web/: index.html  web.conf
remote-app/client/: index.html  main.js  monitor.html  monitor.js  package-lock.json  package.json  style.css
remote-app/remote-client/: README.md  package-lock.json  vite.config.ts
remote-app/remote-client/src/: App.vue
remote-app/remote-client/src/components/: Lcd16.vue  Led.vue
remote-app/remote-client/src/router/: index.ts
remote-app/remote-client/src/views/: Lcd16View.vue  LedView.vue
remote-app/server/: package-lock.json  package.json
remote-app/server/controllers/: itemController.ts  systemController.ts
remote-app/server/database/: database.sqlite  db.ts
remote-app/server/database/database/: database.sqlite
remote-app/server/models/: item.ts  system.ts
remote-app/server/routes/: item.ts  system.ts
remote-app/server/src/: app.ts
smartPointer/: CMakeLists.txt  sharedPointer.cpp  uniquePointer.cpp
smartPointer/includes/: SharedPointer.hpp  UniquePointer.hpp
smartPointer/src/: SharedPointer.cpp  UniquePointer.cpp
sockets/: CMakeLists.txt  TcpServer.cpp  client.cpp  clientTwo.cpp  server.cpp
sockets/includes/: BoundBuffer.hpp  ClientHandler.hpp  TcpClient.hpp  TcpServer.hpp
sockets/src/: ClientHandler.cpp  TcpClient.cpp  TcpServer.cpp
src/: animal.cpp  bench.cpp  counter.cpp  example.cpp  exceptions.cpp  foo.cpp  fraction.cpp  game.cpp  storage_templates.cpp  templates.cpp  threads.cpp  todo.cpp
templates/: CMakeLists.txt  main.cpp
templates/includes/: storageTemplates.hpp
threads/: CMakeLists.txt  buffer.cpp  conditionVariable.cpp  main.cpp  threads.cpp
threads/includes/: AtomicCounter.hpp  Counter.hpp  CounterBase.hpp  SafeCounter.hpp  atomicCounter.hpp  counter.hpp  futureThread.hpp  safeCounter.hpp
threads/src/: FutureThread.cpp  SafeCounter.cpp  atomicCounter.cpp  counter.cpp  futureThread.cpp  safeCounter.cpp
