cmake_minimum_required(VERSION 3.9)
project(project_demo)
set(CMAKE_BUILD_TYPE Release)

# include_directories("${PROJECT_SOURCE_DIR}/includes")
# file(GLOB SOURCES "src/*.cpp")
# add_library(applib SHARED ${SOURCES})
# add_executable(app ${SOURCES} main.cpp)
# target_link_libraries(app applib)

include_directories(${PROJECT_SOURCE_DIR}/includes)
file(GLOB SOURCES "src/*.cpp")
add_library(applib SHARED ${SOURCES})
# add_library(applib SHARED src/foo.cpp src/todo.cpp)
add_executable(app main.cpp)
target_link_libraries(app applib)
